; ModuleID = '/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_verify_dnode_bt.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/ztest/extr_ztest.c_ztest_verify_dnode_bt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32* }
%struct.TYPE_12__ = type { i64, i32, i32, i32, i32 }
%struct.TYPE_13__ = type { i32, i32 }

@RL_READER = common dso_local global i32 0, align 4
@FTAG = common dso_local global i32 0, align 4
@BT_MAGIC = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ztest_verify_dnode_bt(%struct.TYPE_11__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_12__*, align 8
  %9 = alloca %struct.TYPE_13__, align 4
  %10 = alloca i32*, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %3, align 8
  store i64 %1, i64* %4, align 8
  %11 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %5, align 8
  store i32 0, i32* %7, align 4
  store i64 0, i64* %6, align 8
  br label %14

14:                                               ; preds = %84, %2
  %15 = load i32, i32* %7, align 4
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %88

17:                                               ; preds = %14
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %8, align 8
  %18 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %19 = load i64, i64* %6, align 8
  %20 = load i32, i32* @RL_READER, align 4
  %21 = call i32 @ztest_object_lock(%struct.TYPE_11__* %18, i64 %19, i32 %20)
  %22 = load i32*, i32** %5, align 8
  %23 = load i64, i64* %6, align 8
  %24 = load i32, i32* @FTAG, align 4
  %25 = call i64 @dmu_bonus_hold(i32* %22, i64 %23, i32 %24, i32** %10)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %17
  %28 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %29 = load i64, i64* %6, align 8
  %30 = call i32 @ztest_object_unlock(%struct.TYPE_11__* %28, i64 %29)
  br label %84

31:                                               ; preds = %17
  %32 = load i32*, i32** %10, align 8
  %33 = call i32 @dmu_object_info_from_db(i32* %32, %struct.TYPE_13__* %9)
  %34 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %9, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = sext i32 %35 to i64
  %37 = icmp uge i64 %36, 24
  br i1 %37, label %38, label %41

38:                                               ; preds = %31
  %39 = load i32*, i32** %10, align 8
  %40 = call %struct.TYPE_12__* @ztest_bt_bonus(i32* %39)
  store %struct.TYPE_12__* %40, %struct.TYPE_12__** %8, align 8
  br label %41

41:                                               ; preds = %38, %31
  %42 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %43 = icmp ne %struct.TYPE_12__* %42, null
  br i1 %43, label %44, label %77

44:                                               ; preds = %41
  %45 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %46 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = load i64, i64* @BT_MAGIC, align 8
  %49 = icmp eq i64 %47, %48
  br i1 %49, label %50, label %77

50:                                               ; preds = %44
  %51 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %52 = load i32*, i32** %5, align 8
  %53 = load i64, i64* %6, align 8
  %54 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %9, i32 0, i32 1
  %55 = load i32, i32* %54, align 4
  %56 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %57 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %56, i32 0, i32 4
  %58 = load i32, i32* %57, align 4
  %59 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %60 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %59, i32 0, i32 1
  %61 = load i32, i32* %60, align 8
  %62 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %63 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %62, i32 0, i32 3
  %64 = load i32, i32* %63, align 8
  %65 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %66 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %65, i32 0, i32 2
  %67 = load i32, i32* %66, align 4
  %68 = call i32 @ztest_bt_verify(%struct.TYPE_12__* %51, i32* %52, i64 %53, i32 %55, i32 %58, i32 %61, i32 %64, i32 %67)
  %69 = load i32*, i32** %10, align 8
  %70 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %71 = load i64, i64* %6, align 8
  %72 = load i32*, i32** %5, align 8
  %73 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %74 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %73, i32 0, i32 1
  %75 = load i32, i32* %74, align 8
  %76 = call i32 @ztest_verify_unused_bonus(i32* %69, %struct.TYPE_12__* %70, i64 %71, i32* %72, i32 %75)
  br label %77

77:                                               ; preds = %50, %44, %41
  %78 = load i32*, i32** %10, align 8
  %79 = load i32, i32* @FTAG, align 4
  %80 = call i32 @dmu_buf_rele(i32* %78, i32 %79)
  %81 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %82 = load i64, i64* %6, align 8
  %83 = call i32 @ztest_object_unlock(%struct.TYPE_11__* %81, i64 %82)
  br label %84

84:                                               ; preds = %77, %27
  %85 = load i32*, i32** %5, align 8
  %86 = load i32, i32* @FALSE, align 4
  %87 = call i32 @dmu_object_next(i32* %85, i64* %6, i32 %86, i32 0)
  store i32 %87, i32* %7, align 4
  br label %14

88:                                               ; preds = %14
  ret void
}

declare dso_local i32 @ztest_object_lock(%struct.TYPE_11__*, i64, i32) #1

declare dso_local i64 @dmu_bonus_hold(i32*, i64, i32, i32**) #1

declare dso_local i32 @ztest_object_unlock(%struct.TYPE_11__*, i64) #1

declare dso_local i32 @dmu_object_info_from_db(i32*, %struct.TYPE_13__*) #1

declare dso_local %struct.TYPE_12__* @ztest_bt_bonus(i32*) #1

declare dso_local i32 @ztest_bt_verify(%struct.TYPE_12__*, i32*, i64, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ztest_verify_unused_bonus(i32*, %struct.TYPE_12__*, i64, i32*, i32) #1

declare dso_local i32 @dmu_buf_rele(i32*, i32) #1

declare dso_local i32 @dmu_object_next(i32*, i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
